src/components/header/header.css
header {
  height: 100vh;
  padding-top: 7rem;
  overflow: hidden;
  scroll-snap-align: start;
}

.header__container {
  height: 100%;
  text-align: center;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* CTA */
.cta {
  margin-top: 2.5rem;
  display: flex;
  gap: 1.3rem;
  justify-content: center;
}

/* HeaderSocials */
.header__socials {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.8rem;
  position: absolute;
  left: 0;
  bottom: 20%;
}

.header__socials::after {
  content: "";
  width: 1px;
  height: 5rem;
  background: var(--color-primary);
}

/* ME */
.profile__pic {
  width: 200%;
}

.me {
  background: linear-gradient(var(--color-primary), transparent);
  display: flex;
  justify-content: center;
  width: 22rem;
  height: 30rem;
  margin-top: 4rem;
  border-radius: 12rem 12rem 0 0;
  overflow: hidden;
  padding: 2rem 1rem 0.8rem 1rem;
}

.scroll__down {
  position: absolute;
  right: -2.3rem;
  bottom: 20%;
  transform: rotate(90deg);
  font-weight: 200;
  font-size: 0.9rem;
}

/* MEDIA QUERIES (TABLE DEVICES) */
@media screen and (max-width: 1024px) {
  header {
    height: 68vh;
  }
}

/* MEDIA QUERIES (MOBILE DEVICES) */
@media screen and (max-width: 600px) {
  header {
    height: 100vh;
  }

  .header__socials,
  .scroll__down {
    display: none;
  }
}

